delete chassis communication package and add chassis transmitter package

--- a/src/vehicle/chassis_transmitter/CMakeLists.txt
+++ b/src/vehicle/chassis_transmitter/CMakeLists.txt
@@ -1,13 +1,17 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(chassis_communication)
+project(chassis_transmitter)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
+find_package(catkin REQUIRED
+             COMPONENTS
+             roscpp
+             std_msgs
+             tcp_client)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -100,7 +104,7 @@ find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES chassis_communication
+#  LIBRARIES chassis_transmitter
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
 )
@@ -118,7 +122,7 @@ ${catkin_INCLUDE_DIRS}
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/chassis_communication.cpp
+#   src/${PROJECT_NAME}/chassis_transmitter.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -129,7 +133,7 @@ ${catkin_INCLUDE_DIRS}
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/chassis_communication_node.cpp)
+add_executable(${PROJECT_NAME}_node src/chassis_transmitter_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -193,7 +197,7 @@ target_link_libraries(${PROJECT_NAME}_node
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_chassis_communication.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_chassis_transmitter.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
