--- a/src/vehicle/chassis_communication/CMakeLists.txt
+++ b/src/vehicle/chassis_communication/CMakeLists.txt
@@ -10,8 +10,7 @@ add_compile_options(-std=c++11)
 find_package(catkin REQUIRED
              COMPONENTS
              roscpp
-             std_msgs
-             tcp_client)
+             std_msgs)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
