--- a/src/vehicle/chassis_communication/CMakeLists.txt
+++ b/src/vehicle/chassis_communication/CMakeLists.txt
@@ -10,7 +10,8 @@ add_compile_options(-std=c++11)
 find_package(catkin REQUIRED
              COMPONENTS
              roscpp
-             std_msgs)
+             std_msgs
+             message_generation)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -46,11 +47,12 @@ find_package(catkin REQUIRED
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  DIRECTORY
+  msg
+  FILES
+  ChassisRawData.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -67,10 +69,10 @@ find_package(catkin REQUIRED
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  # std_msgs  # Or other packages containing msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
