add mpu9250 decode msg and decode method

--- a/src/vehicle/chassis_communication/CMakeLists.txt
+++ b/src/vehicle/chassis_communication/CMakeLists.txt
@@ -11,7 +11,8 @@ find_package(catkin REQUIRED
              COMPONENTS
              roscpp
              std_msgs
-             message_generation)
+             message_generation
+             geometry_msgs)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -52,6 +53,7 @@ add_message_files(
   msg
   FILES
   ChassisRawData.msg
+  DecodedChassisData.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -71,7 +73,7 @@ add_message_files(
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
-  # std_msgs  # Or other packages containing msgs
+  geometry_msgs  # Or other packages containing msgs
 )
 
 ################################################
